add credentials and WebSecurityConfigurationAdapter.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: user
-
+  security:
+    user:
+      name: admin
+      password: admin
 server:
   port: 8653
+
